--- a/ReactiveCompositeCollections/Package.nuspec
+++ b/ReactiveCompositeCollections/Package.nuspec
@@ -17,7 +17,7 @@
         <language>en-US</language>
         <tags>Weingartner</tags>
         <dependencies>
-            <group targetFramework=".NETFramework4.0">
+            <group>
                 <dependency id="log4net" version="1.2.10" />
                 <dependency id="reactiveui" version="6.5.0" />
                 <dependency id="System.Collections.Immutable" version="1.1.37" />
