--- a/ReactiveCompositeCollections/ReactiveCompositeCollections.csproj
+++ b/ReactiveCompositeCollections/ReactiveCompositeCollections.csproj
@@ -65,6 +65,10 @@
     <Folder Include="lib\" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="DiffLib, Version=2015.7.24.1614, Culture=neutral, PublicKeyToken=9e2fabf3af85dba9, processorArchitecture=MSIL">
+      <HintPath>..\packages\DiffLib.2015.7.24.1614\lib\net40\DiffLib.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="ReactiveUI, Version=6.5.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\reactiveui-core.6.5.0\lib\Net45\ReactiveUI.dll</HintPath>
       <Private>True</Private>
