--- a/ReactiveCompositeCollections/packages.config
+++ b/ReactiveCompositeCollections/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DiffLib" version="2015.7.24.1614" targetFramework="net452" />
   <package id="reactiveui" version="6.5.0" targetFramework="net452" />
   <package id="reactiveui-core" version="6.5.0" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
