--- a/ReactiveCompositeCollections/ReactiveCompositeCollections.csproj
+++ b/ReactiveCompositeCollections/ReactiveCompositeCollections.csproj
@@ -49,7 +49,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\CompositeList.cs" />
+    <Compile Include="src\CompositeBranchList.cs" />
     <Compile Include="src\CompositeSet.cs" />
   </ItemGroup>
   <ItemGroup>
