--- a/ReactiveCompositeCollections/ReactiveCompositeCollections.csproj
+++ b/ReactiveCompositeCollections/ReactiveCompositeCollections.csproj
@@ -48,6 +48,7 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\CompositeBranchList.cs" />
     <Compile Include="src\CompositeSet.cs" />
