--- a/ReactiveCompositeCollections/ReactiveCompositeCollections.csproj
+++ b/ReactiveCompositeCollections/ReactiveCompositeCollections.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\CompositeBranchList.cs" />
     <Compile Include="src\CompositeSet.cs" />
+    <Compile Include="src\ReadOnlyObservableCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="NuGet.config" />
