--- a/ReactiveCompositeCollections/ReactiveCompositeCollections.csproj
+++ b/ReactiveCompositeCollections/ReactiveCompositeCollections.csproj
@@ -1,5 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(SolutionDir)packages\NuGet.Build.Packaging.0.1.324\build\NuGet.Build.Packaging.props" Condition="Exists('$(SolutionDir)packages\NuGet.Build.Packaging.0.1.324\build\NuGet.Build.Packaging.props')" />
+
+  <PropertyGroup>
+    <PackageId>ReactiveCompositeCollections</PackageId>
+    <PackageVersion>1.2.0</PackageVersion>
+    <Authors>Weingartner</Authors>
+    <Description>A .Net library for composing reactive collections 
+        providing monadic types to support LINQ.</Description>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageTags>LINQ RX ReactiveUI</PackageTags>
+    <LicenseUrl>https://opensource.org/licenses/MIT</LicenseUrl>
+  </PropertyGroup>
+
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -14,6 +27,8 @@
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -112,4 +127,12 @@
   <Target Name="AfterBuild">
     <Message Text="Build Exit Code: $(ExitCode)" Importance="High" />
   </Target>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)packages\NuGet.Build.Packaging.0.1.324\build\NuGet.Build.Packaging.props')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)packages\NuGet.Build.Packaging.0.1.324\build\NuGet.Build.Packaging.props'))" />
+    <Error Condition="!Exists('$(SolutionDir)packages\NuGet.Build.Packaging.0.1.324\build\NuGet.Build.Packaging.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)packages\NuGet.Build.Packaging.0.1.324\build\NuGet.Build.Packaging.targets'))" />
+  </Target>
+  <Import Project="$(SolutionDir)packages\NuGet.Build.Packaging.0.1.324\build\NuGet.Build.Packaging.targets" Condition="Exists('$(SolutionDir)packages\NuGet.Build.Packaging.0.1.324\build\NuGet.Build.Packaging.targets')" />
 </Project>
