--- a/ReactiveCompositeCollections/packages.config
+++ b/ReactiveCompositeCollections/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DiffLib" version="2016.4.21.1027" targetFramework="net452" />
+  <package id="NuGet.Build.Packaging" version="0.1.324" targetFramework="net462" developmentDependency="true" />
   <package id="reactiveui" version="7.2.0" targetFramework="net452" />
   <package id="reactiveui-core" version="7.2.0" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
