--- a/ReactiveCompositeCollectionsSpec/ReactiveCompositeCollectionsSpec.csproj
+++ b/ReactiveCompositeCollectionsSpec/ReactiveCompositeCollectionsSpec.csproj
@@ -19,7 +19,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="4.19.4" />
     <PackageReference Include="xunit" Version="2.2.0" />
-    <PackageReference Include="xunit.runner.console" Version="2.2.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
